@@ -1,3 +1,7 @@
+2017-02-22 Mangus Hagdorn
+ * piccolo2/player/PlayerApp.py: listen for messages to update integration time
+   display
+
 2017-02-15 Magnus Hagdorn
  * setup.py: list build dependency in correct place
 
